Добавил методы и документацию для Airport
