# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\AirportController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\AircraftController;
@@ -29,6 +30,17 @@ Route::prefix('aircrafts')->group(function () {
     Route::patch('/{aircraft:aircraft_code}', [AircraftController::class, 'update'])
         ->missing(fn() => response()->json(status: Response::HTTP_NOT_FOUND))
         ->name('aircrafts.update');
+});
+
+Route::prefix('airports')->group(function () {
+    Route::get('/', [AirportController::class, 'index'])->name('airports.index');
+    Route::get('/{airport:airport_code}', [AirportController::class, 'show'])
+        ->missing(fn() => response()->json(status: Response::HTTP_NOT_FOUND))
+        ->name('airports.show');
+    Route::post('/', [AirportController::class, 'store'])->name('airports.store');
+    Route::patch('/{airport:airport_code}', [AirportController::class, 'update'])
+        ->missing(fn() => response()->json(status: Response::HTTP_NOT_FOUND))
+        ->name('airports.update');
 });
 
 Route::fallback(function () {
